Remove duplicate literals